--- a/Adv08_using_Servlet_API/.settings/org.eclipse.wst.common.component
+++ b/Adv08_using_Servlet_API/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="Adv08_using_Servlet_API">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Adv08_using_Servlet_API"/>
         <property name="java-output-path" value="/Adv08_using_Servlet_API/build/classes"/>
+        <property name="context-root" value="/"/>
     </wb-module>
 </project-modules>
