--- a/Adv16_using_Work_With_Files/src/main/webapp/resources/css/index.css
+++ b/Adv16_using_Work_With_Files/src/main/webapp/resources/css/index.css
@@ -12,6 +12,19 @@
 	flex-direction: column
 }
 
+.animated {
+    -webkit-transition: height 0.2s;
+    -moz-transition: height 0.2s;
+    transition: height 0.2s;
+}
+
+.stars
+{
+    margin: 20px 0;
+    font-size: 24px;
+    color: #d17581;
+}
+
 .loader {
 	font-size: 90px;
 	text-indent: -9999em;
